--- a/SadAgregator/View/cells/EmptyCell/EmptyTableViewCell.xib
+++ b/SadAgregator/View/cells/EmptyCell/EmptyTableViewCell.xib
@@ -26,6 +26,7 @@
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="openFolder" translatesAutoresizingMaskIntoConstraints="NO" id="dNj-9V-nIW">
                         <rect key="frame" x="74" y="35.5" width="172" height="105"/>
+                        <color key="tintColor" name="blackwhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="105" id="5Ku-Ji-PCE"/>
                             <constraint firstAttribute="width" constant="172" id="L5P-i7-2pC"/>
@@ -51,6 +52,9 @@
     </objects>
     <resources>
         <image name="openFolder" width="69" height="69"/>
+        <namedColor name="blackwhite">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
         <namedColor name="whiteblack">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
